# kniffs

./: .gitignore  CMakeLists.txt  Makefile  README.md  waaas
raw/: ball_blue.xcf  ball_darkblue.xcf  ball_darkgreen.xcf  ball_darkred.xcf  ball_green.xcf  ball_grey.xcf  ball_joker.xcf  ball_orange.xcf  ball_purple.xcf  ball_red.xcf  ball_teal.xcf  ball_yellow.xcf  loader.xcf  scale_leftdown.xcf  scale_neutral.xcf  scale_rightdown.xcf  scales.xcf  spritesheet_balls.xcf
src/: ball.cpp  ball.h  ballsource.cpp  ballsource.h  event.cpp  event.h  field.cpp  field.h  jokerball.cpp  jokerball.h  lbutton.cpp  lbutton.h  loader.cpp  loader.h  logger.cpp  logger.h  ltexture.cpp  ltexture.h  main.cpp  scale.cpp  scale.h  singleplayer.cpp  singleplayer.h  slot.h  standardball.cpp  standardball.h
